--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@ Min første nettside
 </head>
 <body>
 <h1>Hei, verden!</h1>
+h1 {
+  color: pink;
+}
 <p>Velkommen til min nettside. <br/> Jeg heter <strong>Erika Marie Gåsland</strong> Jeg er 20 år og har bursdag 13. mars <em></em></p>
-<h2>Hei, igjen! En litt mindre tittel denne gang</h2>
-<p>Etter en tittel må det følge med litt mer tekst, ellers ser det rart ut</p>
+<h2>Litt mer om meg</h2>
+<p>Jeg synes det er gøy å spille fotball!</p>
 </body>
 </html>
