--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <link rel="obligatorisk" herf="background.css">
 <title>
 Min første nettside
@@ -13,3 +14,4 @@ Min første nettside
 <p>Jeg synes det er gøy å spille fotball!</p> 
 </body>
 </html> 
+
