--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" herf="Obligatorisk/background.css">
+    <link rel="stylesheet" type="Obligatorisk" href="background.css">
 <title>
 Min første nettside
 </title>
