--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Obligatorisk/background.css">
+    <link rel="stylesheet" href="background.css"/>
 <title>
 Min første nettside
 </title>
