--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@ Min første nettside
 <h1>Hei, verden!</h1>
 <p>Velkommen til min nettside. <br/> Jeg heter <strong>Erika Marie Gåsland</strong> Jeg er 20 år og har bursdag 13. mars <em></em></p>
 <h2>Litt mer om meg</h2>
-<p>Jeg synes det er gøy å spille fotball!</p> 
+<p><ul><li>Jeg synes det er gøy å spille fotball!</li>
+<li>Jeg liker å bake, min favoritt oppskrift er: <a href="https://www.matprat.no/oppskrifter/tradisjon/kanelknuter/"<a/></li>
+<li>Jeg er glad i å være med familie og venner</li></ul></p> 
 </body>
 </html> 
 
