--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Min første nettside
 <p>Velkommen til min nettside. <br/> Jeg heter <strong>Erika Marie Gåsland</strong> Jeg er 20 år og har bursdag 13. mars <em></em></p>
 <h2>Litt mer om meg</h2>
 <p><ul><li>Jeg synes det er gøy å spille fotball!</li>
-<li>Jeg liker å bake, min favoritt oppskrift er: <a href="https://www.matprat.no/oppskrifter/tradisjon/kanelknuter/">kanelknuter</a></li>
+<li>Jeg liker å bake, min favoritt oppskrift er <a href="https://www.matprat.no/oppskrifter/tradisjon/kanelknuter/">kanelknuter</a></li>
 <li>Jeg er glad i å være med familie og venner</li></ul></p> 
 </body>
 </html> 
