--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ Min første nettside
 <p><ul><li>Jeg synes det er gøy å spille fotball!</li>
 <li>Jeg liker å bake, min favoritt oppskrift er <a href="https://www.matprat.no/oppskrifter/tradisjon/kanelknuter/">kanelknuter</a></li>
 <li>Jeg er glad i å være med familie og venner</li></ul></p> 
+<img src="https://cdn-icons-png.flaticon.com/256/8798/8798977.png" alt Fotball>
 </body>
 </html> 
 
